# reddit-los-angeles-analysis

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
data/: 1_comments.json  2_mentions.json  3_stats.json  4_pros_cons.json  5_final_analysis.json  results.md
